Made some final touches on the functionality of the app

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
          <div class="scores">
            
          </div>
+         <div><button type="button" class="reset">Reset</button></div>
      </div>
      <div class="submit-part">
         <h2>Add your score</h2>
