--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <h2>Add your score</h2>
         <form action="submit-form" class="submit-form">
             <input type="text" name="user" class="name" placeholder="Your name">
-            <input type="text" name="score" class="your-score" placeholder="Your score">
+            <input type="number" name="score" class="your-score" placeholder="Your score" required>
             <button type="submit" class="submit">Submit</button>
         </form>
      </div>
